# quickjs_engine

./: CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle  settings.gradle
android/src/main/kotlin/io/quickjs_engine/: QuickjsEnginePlugin.kt
ios/: quickjs_engine.podspec
ios/Classes/: QuickjsEnginePlugin.swift
lib/: quickjs_engine.dart
lib/extensions/: fetch.dart  handle_promises.dart  xhr.dart
lib/javascriptcore/: jscore_runtime.dart
lib/quickjs/: ffi.dart  qjs_typedefs.dart  quickjs_runtime.dart  quickjs_runtime2.dart  utf8_null_terminated.dart
lib/quickjs-sync-server/: quickjs_oasis_jsbridge.dart
linux/: CMakeLists.txt  quickjs_engine_plugin.cc
linux/include/quickjs_engine/: quickjs_engine_plugin.h
macos/: quickjs_engine.podspec
macos/Classes/: QuickjsEnginePlugin.swift
macos/Frameworks/: libquickjs_c_bridge_plugin.dylib
native/: CMakeLists.txt
native/cxx/: libfastdev_quickjs_runtime.cpp
tool/: build_native.ps1  build_native.sh
windows/: CMakeLists.txt  quickjs_engine_plugin.cpp
windows/include/quickjs_engine/: quickjs_engine_plugin.h
